--- a/app.html
+++ b/app.html
@@ -93,27 +93,37 @@
     <main class="container">
       <div class="row row-cols-1 row-cols-md-2">
         <div class="col">
-          <h1 class="display-5 border-bottom border-2 mb-3">Rewind Baby</h1>
-          <h4 class="lead"
-            >A JavaScript coding exercise to write a program which displays a
-            user-entered string in reverse.</h4
-          >
+          <h1 class="display-5 border-bottom border-2 mb-3">ufotofu</h1>
+          <h4 class="lead"></h4>
+            A JavaScript coding exercise to write a program which determines if
+            a user-entered string is a palindrome.
+          </h4>
         </div>
 
         <div class="col">
           <div class="mt-3">
-            <h4 class="lead my-3">Enter text below, then press the button to see it in reverse.</h4>
-            <input type="text" placeholder="Enter a Message to Reverse" id="message" class="w-100 my-3" />
+            <h4 class="lead my-3">
+              Enter text below, then press the button to see it in reverse.
+            </h4>
+            <input
+              type="text"
+              placeholder="Check Palindrome"
+              id="message"
+              class="w-100 my-3"
+            />
             <button class="btn btn-primary my-3" id="btnSubmit">
               Display Message
             </button>
 
-<div class="alert alert-success mt-5 d-none" id="alert" role="alert">
-  <h4 class="alert-heading">Your message has been reversed!</h4>
-  <hr />
-  <p class="mb-0" id="msg"></p>
-</div>
-
+            <div
+              class="alert alert-success alert-danger mt-5 d-none"
+              id="alert"
+              role="alert"
+            >
+              <h4 class="alert-heading"></h4>
+              <hr />
+              <p class="mb-0" id="msg"></p>
+            </div>
           </div>
         </div>
       </div>
@@ -153,9 +163,7 @@
     <!--App JS-->
     <script src="/js/site.js"></script>
     <script>
-      document
-        .getElementById("btnSubmit")
-        .addEventListener("click", getValues);
+      document.getElementById("btnSubmit").addEventListener("click", getValues);
     </script>
   </body>
 </html>
