--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         </div>
         <div class="col order-first order-md-last d-flex align-items-center justify-content-center">
-            <img src="/img/Pack Tracker.jpg" class="img-fluid appLogo" alt="APP NAME LOGO">
+            <img src="/img/UFOTOFU.jpg" class="img-fluid appLogo rounded-3" alt="APP NAME LOGO">
         </div>
       </div>
     </main>
