--- a/app.html
+++ b/app.html
@@ -66,7 +66,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav navbar-nav-bg ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#home"
+                <a class="nav-link active" aria-current="page" href="/index.html"
                   >Home</a
                 >
               </li>
@@ -116,13 +116,21 @@
             </button>
 
             <div
-              class="alert alert-success alert-danger mt-5 d-none"
-              id="alert"
+              class="alert alert-success alert-success mt-5 d-none"
+              id="yesPalindrome"
               role="alert"
             >
-              <h4 class="alert-heading"></h4>
+              <h4 class="alert-heading">Congratulations! You have entered a palindrome!</h4>
               <hr />
               <p class="mb-0" id="msg"></p>
+            </div>
+            <div
+              class="alert alert-success alert-danger mt-5 d-none"
+              id="noPalindrome"
+              role="alert"
+            >
+              <h4 class="alert-heading">You have not entered a palindrome!</h4>
+              <hr /><p class="mb-0" id="msg2"></p>
             </div>
           </div>
         </div>
