--- a/code.html
+++ b/code.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ufotofu</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -41,99 +41,162 @@
       href="/img/favicon-32x32.png"
       type="image/x-icon"
     />
-</head>
-<body>
-<header>
-     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="/img/Gates Aqua Mark (2560 × 2560 px).png" height="60" />
-        </a>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="/img/Gates Aqua Mark (2560 × 2560 px).png" height="60" />
+          </a>
 
-        <!-- TODO: customize mobile menu button -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-bg">
-            <i class="bi bi-list"></i>
-          </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav navbar-nav-bg ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/app.html">The App</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/code.html">The Code</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">The Repo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-          </ul>
+          <!-- TODO: customize mobile menu button -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-bg">
+              <i class="bi bi-list"></i>
+            </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav navbar-nav-bg ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#home"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/app.html">The App</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/code.html">The Code</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">The Repo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blog.html">Blog</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-</header>
-<main class="container">
-<h1 class="border-bottom border-2 border-dark mt-3">The Code</h1>
-<div class="row">
-    <div class="col-12 col-lg-8">
-        <pre class="line-numbers">
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="border-bottom border-2 border-dark mt-3">The Code</h1>
+      <div class="row">
+        <div class="col-12 col-lg-8">
+          <pre class="line-numbers">
             <code class="language-js">
-                function displayMessage() {
-    let msg = document.getElementById("message").value;
-    alert(msg);
-  
+                //controller
+function getValues() {
+  let userInput = document.getElementById("message").value;
+
+  let lowerCaseMessage = userInput.toLowerCase();
+
+  let noPunctuationOrSpacing = lowerCaseMessage.replace(
+    /[.,/#!$%^&*;:{}=-_`~() ]/g,
+    ""
+  );
+
+  let checkedInput = checkForPalindrome(noPunctuationOrSpacing);
+
+  displayResults(checkedInput);
+}
+
+//buisiness logic
+function checkForPalindrome(message) {
+
+  let checkPalindrome = "";
+  let forwardMessage = "";
+  let reverseMessage = "";
+
+  for (let i = 0; i < message.length; i++) {
+    forwardMessage += message[i];
+  }
+
+  for (let i = message.length - 1; i >= 0; i--) {
+    reverseMessage += message[i];
+  }
+
+  if (forwardMessage == reverseMessage) {
+    document.getElementById("noPalindrome").classList.add("d-none");
+    document.getElementById("yesPalindrome").classList.remove("d-none");
+    checkPalindrome += reverseMessage;
+  } else {
+    document.getElementById("yesPalindrome").classList.add("d-none");
+    document.getElementById("noPalindrome").classList.remove("d-none");
+    checkPalindrome += "Check out your message reversed: " + reverseMessage;
+  }
+
+  return checkPalindrome;
+  // return reverseMessage;
+}
+
+//View function
+function displayResults(checkPalindrome) {
+  document.getElementById("msg").textContent = checkPalindrome;
+  document.getElementById("msg2").textContent = checkPalindrome;
 }
             </code>
         </pre>
-    </div>
-    <div class="col-12 col-lg-4">
-        <p>The code is structured in one function</p>
-        <h5>displayMessage</h5>
-        <p>Prints out the message</p>
-    </div>
-</div>
-</main>
-<footer>
-      
-        <div class="container">
-            <div
-              class="row mb-3 mt-2 row-cols-1 row-cols-md-3 align-items-center gy-3 text-center"
-            >
-              <div class="col">
-                <img src="/img/Water Gates Banner.png" height="90" class="pt-1" />
-              </div>
-              <div class="col text-md-end">
-                <a href="mylinked in">
-                  <i class="bi bi-linkedin p-2 socialicons"></i></a
-                >&nbsp;<a href="https://github.com/bryantgates"
-                  ><i class="bi bi-github p-2 socialicons"></i
-                ></a>
-              </div>
-              <div class="col text-dark order-md-first text-md-start mt-2">
-                &copy; 2023 Bryant Gates
-              </div>
-            </div>
         </div>
-      
+        <div class="col-12 col-lg-4">
+          <p>The code is structured in three functions</p>
+          <h5>getValues</h5>
+          <p>
+            The getValues function is used to acquire the user input. It then
+            takes the input and removes capital letters, spacing, and special
+            characters so the checkForPalindrome function can use it.
+          </p>
+          <h5>checkForPalindrome</h5>
+          <p>
+            This function takes the cleaned up input from getValues and lays it
+            out into two strings of forward and backward individual characters.
+            These two strings are then measured against each other to see if
+            they are equal and thus a palindrome. Depending on the result, it
+            will activate classes in the html and place the user inputed message
+            in reverse, into the displayResults function.
+          </p>
+          <h5>displayResults</h5>
+          <p>
+            This function simply displays the reversed text into the html. As a
+            result of the checkForPalindrome activating only one result "success
+            or failure", this function sends the reversed message to two
+            locations in the html, but only one will be seen.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div
+          class="row mb-3 mt-2 row-cols-1 row-cols-md-3 align-items-center gy-3 text-center"
+        >
+          <div class="col">
+            <img src="/img/Water Gates Banner.png" height="90" class="pt-1" />
+          </div>
+          <div class="col text-md-end">
+            <a href="mylinked in">
+              <i class="bi bi-linkedin p-2 socialicons"></i></a
+            >&nbsp;<a href="https://github.com/bryantgates"
+              ><i class="bi bi-github p-2 socialicons"></i
+            ></a>
+          </div>
+          <div class="col text-dark order-md-first text-md-start mt-2">
+            &copy; 2023 Bryant Gates
+          </div>
+        </div>
+      </div>
     </footer>
     <!--Bootstrap CSS-->
     <script
@@ -144,12 +207,12 @@
 
     <script src="/js/prism.js"></script>
     <script>
-        Prism.plugins.NormalizeWhitespace.setDefaults({
-            'remove-trailing': true,
-            'remove-indent': true,
-            'left-trim': true,
-            'right-trim': true
-        })
+      Prism.plugins.NormalizeWhitespace.setDefaults({
+        "remove-trailing": true,
+        "remove-indent": true,
+        "left-trim": true,
+        "right-trim": true,
+      });
     </script>
-</body>
+  </body>
 </html>
